cabal-version: 2.2
name:
  voidt
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/voidt
bug-reports:
  https://github.com/chessai/voidt/issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    VoidT
  build-depends:
    , base >= 4.10 && < 4.13
  ghc-options:
    -Wall
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/voidt.git
